--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -50,10 +50,10 @@
             <div ng-if="nav.user" class="container side-menu" style="padding-top: 10px; margin-left: -20px; border-bottom: 1px solid #eee;    margin-bottom: -5px;">
                 <div class="row side-menu">
                     <div class="col-sm-3">
-                        <a ui-sref="user.profile({profile: nav.user, location_path: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
+                        <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
                     </div>
                     <div class="col-sm-9" style="padding-top: 3px; white-space: nowrap;">
-                        <a ui-sref="user.profile({profile: nav.user, location_path: nav.user.key, community: {}})">{{nav.user.profile.name}}</a>
+                        <a ui-sref="user.dashboard({profile: nav.user, location_path: nav.user.key, community: {}})">{{nav.user.profile.name}}</a>
                         <div style="margin-left: -10px; padding-top: 1px;">
                             <span ng-repeat="(item, val) in nav.user.roles" class="user-role"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'advisor', 'text-success fa fa-leaf' : item == 'investor', 'text-danger fa fa-flag' : item == 'leader'}"></i></span>
                         </div>
@@ -76,7 +76,7 @@
                 </a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a ui-sref="{{nav.location.type + '.dashboard({community: nav.location})'}}" ng-class="{active: nav.path().includes('/' + nav.location.key)}">
+                        <a ui-sref="{{nav.location.type + '.dashboard({location_path: nav.location.key, community: nav.location})'}}" ng-class="{active: nav.path().includes('/' + nav.location.key)}">
                             <span ng-if="nav.location.community_profiles[nav.location_path]">
                                 <i ng-if="nav.location.community_profiles[nav.location_path].icon" ng-class="'fa ' + nav.location.community_profiles[nav.location_path].icon"></i>
                                 <i ng-if="!nav.location.community_profiles[nav.location_path].icon" class="fa fa-globe"></i>
@@ -87,10 +87,10 @@
                                     &nbsp;&nbsp;{{nav.location.profile.name}}</span>
                         </a>
                         <ul ng-show="nav.path().endsWith(nav.location_path + '/people') || nav.path().endsWith(nav.location_path + '/startups') || nav.path().endsWith(nav.location_path)" style="display: block;">
-                            <li ui-sref="user.dashboard" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
+                            <li ui-sref="user.list" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
-                            <li ui-sref="startup.dashboard" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/startups') }">
+                            <li ui-sref="startup.list" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/startups') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
@@ -128,10 +128,10 @@
                                 <i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</span>
                         </a>
                         <ul ng-if="nav.path().includes('/' + item.key)">
-                            <li ui-sref="user.dashboard({location_path: nav.location_path, community_path: item.key, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/people') }">
+                            <li ui-sref="user.list({location_path: nav.location_path, community_path: item.key, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
-                            <li ui-sref="startup.dashboard({location_path: nav.location_path, community_path: item.key, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/startups') }">
+                            <li ui-sref="startup.list({location_path: nav.location_path, community_path: item.key, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/startups') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
