--- a/app/components/common/dashboard/dashboard.html
+++ b/app/components/common/dashboard/dashboard.html
@@ -90,7 +90,18 @@
                     <h3>Top Industries</h3>
                 </div>
 
+                <div class="row" ng-repeat="item in dashboard.top.companies.top | limitTo: 10">
+                    <div class="col-xs-10 forum-heading">
+                        <a ui-sref="search.dashboard({location_path: dashboard.location_path, query: item.value})"><h4 style="font-weight: 200;">{{item.value}}</h4></a>
+                        <progressbar ng-attr-value="item.count/dashboard.top.skills.total" type="success" class="progress-small full"></progressbar>
+                    </div>
+                    <div class="col-xs-2 forum-info">
+                            <span class="number">{{item.count}}</span>
+                            <small>{{item.count == 1 ? 'Company' : 'Companies'}}</small>
+                    </div>
+                </div>
 
+                <!--
                 <div class="panel-body" ng-repeat="industry in dashboard.top.companies.top | limitTo: 5">
                     <div class="row" ng-if="dashboard.communities[industry.value]">
                         <div class="col-xs-10 forum-heading">
@@ -114,6 +125,7 @@
                         </div>
                     </div>
                 </div>
+                -->
 
             </div>
         </div>
